--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         </a>
 
         <ul class="menu">
-          <li><a href="#">Get the App</a></li>
-          <li><a href="#">Tutorials</a></li>
-          <li><a href="#">Magazines</a></li>
-          <li><a href="#">Web Tools</a></li>
-          <li><a href="#">Support</a></li>
-          <li><a href="#">Careers</a></li>
+          <li><a href="#">Hi</a></li>
+          <li><a href="#">Joe</a></li>
+          <li><a href="#">Young</a></li>
+          <li><a href="#">:-)</a></li>
+          <li><a href="#">Test</a></li>
+          <li><a href="#">test</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
             <ul class="dropdown-menu">
