--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <li><a href="#">Young</a></li>
           <li><a href="#">:-)</a></li>
           <li><a href="#">Test</a></li>
-          <li><a href="#">test</a></li>
+          <li><a href="#">Test</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle">More <b class="caret"></b></a>
             <ul class="dropdown-menu">
