Final prep before website production

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="row">
             <div class="slide-copy col-xs-5">
               // Name can go here
-	      <h1>Purely Science</h1>
+	      <h1></h1>
               // Bio can go here
 	      <p>...</p>
               
@@ -45,9 +45,9 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              // Picture can go below between " " (removed cnn pic)
+              // Picture can go below between " "
 	      <a href="#"><img src=""></a>
-              <a href="#">Read Now</a>
+              <a href="#"></a>
             </div>
             
           </div>
