--- a/index.html
+++ b/index.html
@@ -25,17 +25,17 @@
         <div class="container">
           <div class="row">
             <div class="slide-copy col-xs-5">
-              // Name can go here
+              <!-- Name can go here --!>
 	      <h1></h1>
-              // Bio can go here
-	      <p>...</p>
+              <!-- Bio can go here --!>
+	      <p></p>
               
               <ul class="get-app">
-              // Stuff to click on
+              <!-- Stuff to click on --!>
 	      </ul>
             </div>
             <div class="slide-img col-xs-7">
-            // Picture can go here for background on first slide
+            <!-- Picture can go here for background on first slide --!>
 	    </div>
           </div>
         </div>      
@@ -45,7 +45,7 @@
         <div class="container">
           <div class="row">
             <div class="col-xs-12">
-              // Picture can go below between " "
+              <!-- Picture --!>
 	      <a href="#"><img src=""></a>
               <a href="#"></a>
             </div>
@@ -64,7 +64,7 @@
               
             </div>
             <div class="slide-img col-xs-7">
-              //pic for third bullet can go below btwn " "
+              <!-- pic for third bullet can go below btwn --!>
 	      <img src="">
             </div>
           </div>
@@ -87,7 +87,7 @@
               </ul>
             </div>
             <div class="slide-img col-xs-7">
-              // Pic for last slide  btwn ""
+              <!-- Pic for last slide  btwn !-->
 	      <img src="" width="540px">
             </div>
           </div>
