--- a/index.html
+++ b/index.html
@@ -106,8 +106,18 @@
       </ul>
       <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
     </div> 
-    
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="app.js"></script>
+   
+    <script src="//http://cdnjs.cloudflare.com/ajax/libs/three.js/r70/three.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
+    <script src="js/ConvexGeometry.js"></script>
+    <script src="js/CopyShader.js"></script>
+    <script src="js/RenderPass.js"></script>
+    <script src="js/EffectComposer.js"></script>
+    <script src="js/MaskPass.js"></script>
+    <script src="js/GeometryUtils.js"></script>
+    <script src="js/ShaderPass.js"></script>.
+    <script src="js/TrackballControls.js"></script>
+    <script src="js/app.js"></script>
+
   </body>
 </html>
