--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
     <script src="js/ShaderPass.js"></script>.
     <script src="js/TrackballControls.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/3dGeometry.js"></script>
+    <script src="js/3dGeometryInfo.js"></script>
 
   </body>
 </html>
