fix three.js lib

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
     </div> 
    
-    <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"s></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script src="js/ConvexGeometry.js"></script>
     <script src="js/CopyShader.js"></script>
