--- a/index.html
+++ b/index.html
@@ -101,7 +101,18 @@
       </ul>
       <a href="#" class="arrow-next"><img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/flipboard/arrow-next.png"></a>
     </div> 
-   
+  
+    <div id="skills" class="full-wh">
+      <div class="menu skills-info">
+      	<div class="editor">
+
+	</div>
+      
+      </div>
+      <div class="skills-canvas">
+      </div>
+
+
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script src="js/ConvexGeometry.js"></script>
