--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="skills-canvas">
       </div>
 
-
+    <script src="//d3js.org/d3.v3.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script src="js/ConvexGeometry.js"></script>
@@ -126,6 +126,7 @@
     <script src="js/app.js"></script>
     <script src="js/3dGeometry.js"></script>
     <script src="js/3dGeometryInfo.js"></script>
+    
 
   </body>
 </html>
