--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="skills-canvas">
       </div>
 
-    <script src="//d3js.org/d3.v3.min.js"></script>
+    <script src="//d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/three.js/r73/three.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script src="js/ConvexGeometry.js"></script>
