fix javascript source paths

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
         
         <!-- JavaScript imports -->
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
-        <script type="text/javascript" src="js/wiggle.js"></script>
-        <script type="text/javascript" src="js/hashchange.js"></script>
-        <script type="text/javascript" src="js/menu.js"></script>
+        <script type="text/javascript" src="js/look_and_feel_JS/wiggle.js"></script>
+        <script type="text/javascript" src="js/look_and_feel_JS/hashchange.js"></script>
+        <script type="text/javascript" src="js/look_and_feel_JS/menu.js"></script>
 
     </head>
     
