change jquery import from http to https

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link href="css/index.css" rel="stylesheet" type="text/css" />
         
         <!-- JavaScript imports -->
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js" type="text/javascript"></script>
         <script type="text/javascript" src="js/look_and_feel_JS/wiggle.js"></script>
         <script type="text/javascript" src="js/look_and_feel_JS/hashchange.js"></script>
         <script type="text/javascript" src="js/look_and_feel_JS/menu.js"></script>
@@ -42,7 +42,7 @@
             <a href="pages/media.page/"><img class="m1logo" data-title="media" src="pages/media.page/logo.png" /></a>
             <br />
 
-            <!-- apps page
+            apps page
             <a href="pages/apps.page/"><img class="m1icon" data-title="apps" src="pages/apps.page/icon.png" /></a>
             <a href="pages/apps.page/"><img class="m1logo" data-title="apps" src="pages/apps.page/logo.png" /></a>
             <br />
