--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta charset='utf-8'>
     <meta name="viewport" content='width=device-width, initial-scale=1'>
     <title>Joseph Leavitt</title>
-    <meta name='description' content="Joe's Gomepage">
+    <meta name='description' content="Joe's Homepage">
     <meta name='author' content='Joseph Leavitt'>
     <script src='/assets/vendor/jquery/jquery.min.js'></script>
     <script src='/assets/vendor/typed/typed.min.js'></script>
